# geyi

./: .gitignore  README.md  pyproject.toml  result.json
examples/cast1d/: cast.cu  geyi.yaml
examples/copy1d/: copy.cu  geyi.yaml
examples/elementwise_mul/: geyi.yaml  mul.cu
examples/elementwise_neg/: geyi.yaml  neg.cu
examples/pytorch_load_inline/: run.py
examples/template_gap/: fused_add_relu.cu  geyi.yaml
examples/transpose2d/: geyi.yaml  transpose.cu
examples/vector_add/: geyi.yaml
geyi/: __init__.py  analysis.py  config.py  phase0.py  phase1.py  phase2.py  phase3.py  phase4.py  profiler.py  session.py  tuning.py
geyi/backend/: __init__.py  ascendc.py  model.py  tilelang.py
geyi/cli/: info.py  library.py  main.py  patch.py  run.py  setup.py  tune.py
geyi/context/: __init__.py  budget.py  compression.py  orchestrator.py  sessions.py
geyi/contract/: __init__.py  confidence.py  model.py  schema.py
geyi/evidence/: __init__.py  scanner.py
geyi/knowledge/: __init__.py  cannbot.py
geyi/llm/: __init__.py  client.py  diagnostics.py  planner.py  prompt_builder.py  repair.py  schemas.py
geyi/planner/: __init__.py  plan.py
geyi/verifier/: __init__.py  ascendc.py  golden.py  report.py
scripts/: validate_phase1_cann.sh
tests/: test_ascendc_backend.py  test_contracts.py  test_deterministic_e2e.py  test_library_lock.py  test_library_retrieval.py  test_llm_planner_mock.py  test_llm_planner_schema.py  test_llm_provider_credentials.py  test_model_harness_load_inline.py  test_phase3_performance.py  test_phase_minus_one.py  test_phase_zero.py
(+19 files in other folders)
