[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "geyi"
version = "0.0.1"
description = "Geyi constrained CUDA-to-Ascend migration harness prototype"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
geyi = "geyi.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
